fixed layout issue with modal. removed outlines from buttons/modal.

--- a/static/app.css
+++ b/static/app.css
@@ -2360,7 +2360,8 @@ ul.no-bullet, ol.no-bullet {
     float: right;
     margin-left: 1em; }
   .button.dropdown.hollow::after, .button.dropdown.clear::after {
-    border-top-color: #25d185; }  .button.dropdown.hollow.primary::after, .button.dropdown.clear.primary::after {
+    border-top-color: #25d185; }
+  .button.dropdown.hollow.primary::after, .button.dropdown.clear.primary::after {
     border-top-color: #aaf0d1; }
   .button.dropdown.hollow.secondary::after, .button.dropdown.clear.secondary::after {
     border-top-color: #fffab0; }
@@ -4767,6 +4768,12 @@ body {
   font-family: "Baloo Da 2", cursive;
   margin: 0; }
 
+span {
+  outline: none; }
+
+button {
+  outline: none; }
+
 .full-page {
   width: 100vw;
   height: 100vh; }
@@ -4813,6 +4820,7 @@ body {
         #top .overlay .login a, #top .overlay .login a:visited, #top .overlay .login a:active, #top .overlay .login a:hover {
           letter-spacing: 2px;
           color: white;
+          outline: none;
           border-bottom: 2px solid transparent;
           -webkit-transition: 0.3s ease-in-out;
           -moz-transition: 0.3s ease-in-out;
@@ -4874,6 +4882,7 @@ body {
       transition: 0.3s ease; }
       #top .overlay .learn-more a, #top .overlay .learn-more a:visited, #top .overlay .learn-more a:active {
         color: #fefefe;
+        outline: none;
         -webkit-transition: 0.3s ease-in-out;
         -moz-transition: 0.3s ease-in-out;
         -ms-transition: 0.3s ease-in-out;
@@ -4995,6 +5004,9 @@ body {
             color: #ffeb3b;
             padding: 7px 0; }
 
+.reveal {
+  outline: none; }
+
 .login-box {
   box-shadow: 0 2px 4px rgba(10, 10, 10, 0.4);
   background: #fefefe;
@@ -5075,7 +5087,7 @@ body {
     background-color: #aaf0d1;
     color: #0a0a0a; }
   .login-box-submit-button:hover, .login-box-submit-button:focus {
-    background-color: #bbf3da;
+    background-color: #ccf6e3;
     color: #0a0a0a; }
 
 .login-box-submit-button:hover, .login-box-submit-button:focus {
@@ -5111,7 +5123,7 @@ body {
     background-color: #3b5998;
     color: #fefefe; }
   .login-box-social-button-facebook:hover, .login-box-social-button-facebook:focus {
-    background-color: #5375bc;
+    background-color: #7e97cd;
     color: #fefefe; }
 
 .login-box-social-button-twitter {
@@ -5141,7 +5153,7 @@ body {
     background-color: #55acee;
     color: #fefefe; }
   .login-box-social-button-twitter:hover, .login-box-social-button-twitter:focus {
-    background-color: #77bdf1;
+    background-color: #99cdf5;
     color: #fefefe; }
 
 .login-box-social-button-google {
@@ -5171,7 +5183,7 @@ body {
     background-color: #dd4b39;
     color: #fefefe; }
   .login-box-social-button-google:hover, .login-box-social-button-google:focus {
-    background-color: #e46f61;
+    background-color: #eb9388;
     color: #fefefe; }
 
 [class*="login-box-social-button-"]:hover,
