--- a/static/styles/_main.scss
+++ b/static/styles/_main.scss
@@ -5,3 +5,11 @@ body {
   font-family: $main-font;
   margin: 0;
 }
+
+span {
+  outline: none;
+}
+
+button {
+  outline: none;
+}
